# RoboND-WhereAmI-Project-P6

./: README.md
ros/src/ls_bot/: CMakeLists.txt  package.xml
ros/src/ls_bot/config/: base_local_planner_params.yaml  control.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ros/src/ls_bot/launch/: amcl.launch  robot_description.launch  rviz.launch  sandbox_world.launch
ros/src/ls_bot/rviz/: all.rviz
ros/src/ls_bot/urdf/: camera.urdf.xacro  depth_sensor.urdf.xacro  lidar.urdf.xacro  sandbox_bot.xacro
ros/src/udacity_bot/: CMakeLists.txt  package.xml
ros/src/udacity_bot/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
ros/src/udacity_bot/launch/: amcl.launch  robot_description.launch  udacity_world.launch
ros/src/udacity_bot/rviz/: bot.rviz
ros/src/udacity_bot/urdf/: udacity_bot.gazebo  udacity_bot.xacro
