<package>
  <name>ls_bot</name>
  <version>0.1.0</version>

  <description>Sandbox Rover description package</description>
  <author>Luciano Silveira</author>

  <maintainer email="ladrians@gmail.com">Luciano Silveira</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
